@@ -13,29 +13,48 @@ class TestOrgUnitSelector(unittest2.TestCase):
         self.unit_b = OrgUnit('clientb', title="Client B")
         self.unit_c = OrgUnit('clientc', title="Client C")
 
-    def test_raise_value_error_when_callig_without_empty_unit_list(self):
+    def test_raise_value_error_when_callig_without_empty_current_unit_list(self):
         with self.assertRaises(ValueError) as cm:
-            OrgUnitSelector({}, [])
+            OrgUnitSelector({}, [], [])
 
         self.assertEquals(
-            'The OrgUnitSelector needs at least one Unit.',
+            'The OrgUnitSelector needs at least one possible current unit.',
             str(cm.exception))
 
     def test_get_current_unit_returns_unit_which_is_storred_in_the_session(self):
         selector = OrgUnitSelector(
             {CURRENT_ORG_UNIT_KEY: 'clientb'},
+            [self.unit_a, self.unit_b],
             [self.unit_a, self.unit_b])
 
         self.assertEquals(self.unit_b, selector.get_current_unit())
 
     def test_get_current_unit_returns_fallback_unit_when_no_unit_is_storred(self):
-        selector = OrgUnitSelector({}, [self.unit_a, self.unit_b])
+        selector = OrgUnitSelector({},
+                                   [self.unit_a, self.unit_b],
+                                   [self.unit_a, self.unit_b])
 
         self.assertEquals(self.unit_a, selector.get_current_unit())
 
-    def test_available_units_are_all_units(self):
+    def test_fallback_is_first_current_unit(self):
         selector = OrgUnitSelector({},
-            [self.unit_a, self.unit_b, self.unit_c])
+                                   [self.unit_b, self.unit_c],
+                                   [self.unit_a, self.unit_b])
+
+        self.assertEquals(self.unit_b, selector.get_current_unit())
+
+    def test_current_unit_returns_fallback_when_storred_unit_is_not_part_of_the_current_units(self):
+        selector = OrgUnitSelector({CURRENT_ORG_UNIT_KEY: 'clientb'},
+                                   [self.unit_c],
+                                   [self.unit_a, self.unit_b])
+
+        self.assertEquals(self.unit_c, selector.get_current_unit())
+        self.assertEquals('clientb', selector._get_current_unit_id())
+
+    def test_available_units_are_all_selectable_units(self):
+        selector = OrgUnitSelector({},
+                                   [self.unit_a],
+                                   [self.unit_a, self.unit_b, self.unit_c])
 
         self.assertEquals([self.unit_a, self.unit_b, self.unit_c],
                           selector.available_units())
@@ -43,6 +62,7 @@ class TestOrgUnitSelector(unittest2.TestCase):
     def test_set_current_unit_updates_current_id(self):
         selector = OrgUnitSelector(
             {CURRENT_ORG_UNIT_KEY: 'clientb'},
+            [self.unit_a, self.unit_b, self.unit_c],
             [self.unit_a, self.unit_b, self.unit_c])
 
         selector.set_current_unit('clienta')
@@ -53,6 +73,7 @@ class TestOrgUnitSelector(unittest2.TestCase):
     def test_set_current_unit_updates_activ_unit(self):
         selector = OrgUnitSelector(
             {CURRENT_ORG_UNIT_KEY: 'clientb'},
+            [self.unit_a, self.unit_b, self.unit_c],
             [self.unit_a, self.unit_b, self.unit_c])
 
         selector.set_current_unit('clienta')
