@@ -5,8 +5,13 @@ Changelog
 4.0.6 (unreleased)
 ------------------
 
-- OrgUnit Selector: store current unit to regular cookie instead of
-  using the session_data_manager.
+- Reworked OrgUnit Selector:
+    - Store current unit to regular cookie instead of using the session_data_manager.
+    - Differentiate between users_units (selectable) and admin_unit's org_unit
+      (current org_unit).
+    - Change current org_unit functionality, the current orgunit has to be
+      part of the current admin_unit.
+
   [phgross]
 
 - Made schemamigrations to 4.0.x release oracle compatible.
